--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,9 +2,9 @@ name: Linting
 
 on:
   push:
-    branches: [ main, release* ]
+    branches: [ suma/4.3, suma/head, uyuni/master ]
   pull_request:
-    branches: [ main, release* ]
+    branches: [ suma/4.3, suma/head, uyuni/master ]
 
 jobs:
   lint_docs:
