--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -2,9 +2,9 @@ name: Building Cobbler packages
 
 on:
   push:
-    branches: [ main, release* ]
+    branches: [ suma/4.3, suma/head, uyuni/master ]
   pull_request:
-    branches: [ main, release* ]
+    branches: [ suma/4.3, suma/head, uyuni/master ]
 
 jobs:
   build-centos8-rpms:
