--- a/tests/test_data/V3_3_3/settings.yaml
+++ b/tests/test_data/V3_3_3/settings.yaml
@@ -566,6 +566,10 @@ iso_template_dir: "/etc/cobbler/iso"
 signature_path: "/var/lib/cobbler/distro_signatures.json"
 signature_url: "https://cobbler.github.io/signatures/3.0.x/latest.json"
 
+# A cache of some internal operations can speed up their execution, but can slow down
+# editing objects.
+cache_enabled: true
+
 # Include other configuration snippets. Overwriting a key from this file in a childfile will overwrite the value from
 # this file.
 include: [ "/code/tests/test_data/V3_3_3/settings.d/*.settings" ]
