Provide option to use pre-built GRUB bootloader (#81)
When using secure boot, users must use a signed
GRUB bootloader that is loaded by the shim file.
This change enables users to specify the location
and name of a signed GRUB bootloader just as we
do with the shim.efi file.

This is a backport of cobbler#3570.

--- a/config/cobbler/settings.yaml
+++ b/config/cobbler/settings.yaml
@@ -133,6 +133,8 @@ syslinux_pxelinux_folder: '@@pxelinux_folder@@'
 grub2_mod_dir: '@@grub_mod_folder@@'
 bootloaders_shim_folder: '@@shim_folder@@'
 bootloaders_shim_file: '@@shim_file@@'
+secure_boot_grub_folder: '@@secure_grub_folder@@'
+secure_boot_grub_file: '@@secure_grub_file@@'
 bootloaders_ipxe_folder: '@@ipxe_folder@@'
 
 # Email out a report when Cobbler finishes installing a system.
